--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -26,7 +26,7 @@
 } */
 
 .menuBtn {
-    display: block;
+    display: none;
     cursor: pointer;
 }
 
@@ -70,11 +70,9 @@
         gap: 13px;
         border-radius: 10px;
         background: rgb(25, 55, 109);
-        background: linear-gradient(
-            0deg,
-            rgba(25, 55, 109, 0.2)0%, 
-            rgba(25, 55, 109, 1) 100%
-        );
+        background: linear-gradient(0deg,
+                rgba(25, 55, 109, 0.2)0%,
+                rgba(25, 55, 109, 1) 100%);
         padding: 24px 33px;
         box-shadow: 0px 0px 4px 0 rgba(0, 0, 0, 0.25);
     }
